--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 <html>
 	<head>
-		<title>About the website</title>
+		<title>About the web application</title>
 	</head>
 <body>
-	<h1>About this website</h1>
+	<h1>About this application</h1>
 </body>
 </html>
