--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 		<title>About the web application</title>
 	</head>
 <body>
-	<h1>About this application</h1>
+	<h1> About this application </h1>
+	<h2>This is a GitHub sandbox</h2>
 </body>
 </html>
