--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 	<h3>Please enter your name:</h3>
 	<input type="text" name="uname">
 	<p>Thank you</p>
+	<small>Copyright some company 2018</small>
 </body>
 </html>
