--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 		<title>Welcome to our web site</title>
 	</head>
 <body>
-	<a href="about.html">About</a>
+	<nav>
+		<ul>
+			<li><a href="/">Home</a></li>
+			<li><a href="about.html">About</a></li>
+		</ul>
+	</nav>
 	<h1> Hello </h1>
 	<h3>Please enter your name:</h3>
 	<input type="text" name="uname">
