--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<ul>
 			<li><a href="/">Home</a></li>
 			<li><a href="about.html">About</a></li>
-			<li><a>Privacy</a></li>
+			<li><a href="privacy.html">Privacy</a></li>
 		</ul>
 	</nav>
 	<h1> Hello </h1>
