Changed Copyright info line to be paragraph

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 	<h1> Hello </h1>
 	<h3>Please enter your name:</h3>
 	<input type="text" name="uname">
-	<br>
-	<small>Copyright some company 2018</small>
+	<p><small>Copyright some company 2018</small></p>
 </body>
 </html>
