--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<title>Welcome to our web site</title>
+		<link rel="stylesheet" href="css/bootstrap.min.css">
 	</head>
 <body>
 	<nav>
@@ -10,9 +11,13 @@
 			<li><a href="privacy.html">Privacy</a></li>
 		</ul>
 	</nav>
-	<h1> Hello </h1>
-	<h3>Please enter your name:</h3>
-	<input type="text" name="uname">
-	<p><small>Copyright some company 2018</small></p>
+	<div class container>
+		<h1> Hello </h1>
+		<h3>Please enter your name:</h3>
+		<input type="text" name="uname">
+	</div>
+	<p>
+		<small>Copyright some company 2018</small>
+	</p>
 </body>
 </html>
