Fixed div class container assigment

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Welcome to our web site</title>
-		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/bootstrap.min.css"/>
 	</head>
 <body>
 	<nav>
@@ -11,7 +11,7 @@
 			<li><a href="privacy.html">Privacy</a></li>
 		</ul>
 	</nav>
-	<div class container>
+	<div class="container">
 		<h1> Hello </h1>
 		<h3>Please enter your name:</h3>
 		<input type="text" name="uname">
