--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 		<h1> Hello </h1>
 		<h3>Please enter your name:</h3>
 		<input type="text" name="uname">
+		<div class="row">
+			<ul>
+				<li><a href="/">Home</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="privacy.html">Privacy</a></li>
+			</ul>
+		</div>
 	</div>
 	<p>
 		<small>Copyright some company 2018</small>
