--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 			<li><a href="/">Home</a></li>
 			<li><a href="about.html">About</a></li>
 			<li><a href="privacy.html">Privacy</a></li>
+			<li><a href="contact.html">Contact</a></li>
 		</ul>
 	</nav>
 	<div class="container">
