--- a/contact.html
+++ b/contact.html
@@ -7,5 +7,6 @@
 	<div class="container">
 		<h3>Enter your e-mail address</h3>
 		<input type="text" value="Enter a valid e-mail please" onclick="Javascript:this.value=''">
+		<button type="submit" class="btn btn-default">Send</button>
 	</div>
 </body>
