--- a/index.html
+++ b/index.html
@@ -4,28 +4,34 @@
 		<link rel="stylesheet" href="css/bootstrap.min.css"/>
 	</head>
 <body>
-	<nav>
-		<ul>
-			<li><a href="/">Home</a></li>
-			<li><a href="about.html">About</a></li>
-			<li><a href="privacy.html">Privacy</a></li>
-			<li><a href="contact.html">Contact</a></li>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		<ul class="navbar-nav mr-auto">
+			<li class="nav-item">
+				<a class="nav-link" href="/">Home</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="about.html">About</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="privacy.html">Privacy</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="contact.html">Contact</a>
+			</li>
 		</ul>
+		</div>
 	</nav>
 	<div class="container">
+		<div id="currentdate">
+		</div>
 		<h1> Hello </h1>
 		<h3>Please enter your name:</h3>
 		<input type="text" name="uname">
-		<div class="row">
-			<ul>
-				<li><a href="/">Home</a></li>
-				<li><a href="about.html">About</a></li>
-				<li><a href="privacy.html">Privacy</a></li>
-			</ul>
-		</div>
 	</div>
 	<p>
 		<small>Copyright some company 2018</small>
 	</p>
+	<script src="gendate/script.js"></script>
 </body>
 </html>
